syntax = "proto3";

package p2p;

import "google/protobuf/empty.proto";

service P2p {
  rpc Version(google.protobuf.Empty) returns (VersionResponse) {}
  rpc FetchBitswap(BitswapRequest) returns (BitswapResponse) {}
  rpc FetchProviderDht(Key) returns (stream Providers) {}
  rpc FetchProviderBitswap(Key) returns (stream Providers) {}
  rpc InjectProviderBitswap(BitswapRequest) returns (google.protobuf.Empty) {}
  rpc GetListeningAddrs(google.protobuf.Empty) returns (GetListeningAddrsResponse) {}
  rpc GetPeers(google.protobuf.Empty) returns (GetPeersResponse) {}
  rpc PeerConnect(ConnectRequest) returns (ConnectResponse) {}
  rpc PeerDisconnect(DisconnectRequest) returns (google.protobuf.Empty) {}
  rpc Shutdown(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc GossipsubAddExplicitPeer(GossipsubPeerIdMsg) returns (google.protobuf.Empty) {}
  rpc GossipsubAllMeshPeers(google.protobuf.Empty) returns (GossipsubPeersResponse) {}
  rpc GossipsubAllPeers(google.protobuf.Empty) returns (GossipsubAllPeersResponse) {}
  rpc GossipsubMeshPeers(GossipsubTopicHashMsg) returns (GossipsubPeersResponse) {}
  rpc GossipsubPublish(GossipsubPublishRequest) returns (GossipsubPublishResponse) {}
  rpc GossipsubRemoveExplicitPeer(GossipsubPeerIdMsg) returns (google.protobuf.Empty) {}
  rpc GossipsubSubscribe(GossipsubTopicHashMsg) returns (GossipsubSubscribeResponse) {}
  rpc GossipsubTopics(google.protobuf.Empty) returns (GossipsubTopicsResponse) {}
  rpc GossipsubUnsubscribe(GossipsubTopicHashMsg) returns (GossipsubSubscribeResponse) {}
}

message VersionResponse {
  string version = 1;
}

message BitswapRequest {
  // Serialized CID of the requested block.
  bytes cid = 1;
  Providers providers = 2;
}

message BitswapResponse {
  bytes data = 1;
}

message Providers {
  // List of providers. Serialized PeerIds
  repeated bytes providers = 1;
}

message Key {
  bytes key = 1;
}

message GetListeningAddrsResponse {
  // Serialized peer id
  bytes peer_id = 1;
  // Serialized list of multiaddrs
  repeated bytes addrs = 2;
}

message GetPeersResponse {
  // map of peer ids to a list of multiaddrs
  // gRpc maps cannot have `bytes` as a key, so using `string` instead
  // gRpc maps cannot have `repeated` as part of the value, so abstrating
  // the list of serialized Multiaddr as a protobuf type `Multiaddrs`
  map<string, Multiaddrs> peers = 1;
}

message ConnectRequest {
  // Serialized peer id
  bytes peer_id = 1; 
  // Serialized list of multiaddrs
  repeated bytes addrs = 2;
}

message ConnectResponse {
  bool success = 1; 
}

message DisconnectRequest {
  // Serialized peer id
  bytes peer_id = 1;
}

message Multiaddrs {
  // Serialized list of multiaddrs
  repeated bytes addrs = 1;
}


message GossipsubPeerIdMsg {
  // Serialized PeerId
  bytes peer_id = 1;
}

message GossipsubTopicHashMsg {
  // Serialized topic hash
  string topic_hash = 1;
}

message GossipsubPublishRequest {
  // Serialized topic hash
  string topic_hash = 1;
  // Bytes of data to publish
  bytes data = 2;
}

message GossipsubPublishResponse {
  // Serialized message Gossipsubid
  bytes message_id = 1;
}

message GossipsubSubscribeResponse {
  bool was_subscribed = 1;
}

message GossipsubAllPeersResponse {
  repeated GossipsubPeerAndTopics all = 1;
}

message GossipsubPeerAndTopics {
  bytes peer_id = 1;
  repeated string topics = 2;
}

message GossipsubPeersResponse {
  // List of PeerIds
  repeated bytes peers = 1;
}

message GossipsubTopicsResponse {
  // List of topics
  repeated string topics = 1;
}

